k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tournify
  labels:
    name: tournify
    app: tournify
