k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tournify-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: admin.tournify.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tournify-admin-web-service
            port:
              number: 80
  - host: app.tournify.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tournify-user-web-service
            port:
              number: 80
  - host: api.tournify.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tournify-backend-service
            port:
              number: 80
